# real-estate-finder

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-docker.txt  requirements.txt  test_env.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_platforms.py  003_add_preference_filters.py  004_add_image_url.py
backend/app/: config.py  main.py  observability.py
backend/app/agents/: chat.py  digest.py
backend/app/db/: database.py  models.py
backend/app/routes/: chat.py  properties.py
backend/app/schemas/: chat.py
backend/app/services/: email.py  etl.py  scheduler.py  seeder.py  vector_store.py
backend/app/tools/: chat_tools.py  google_places.py
backend/app/tools/scrapers/: base.py  bayut.py  behomes.py  bhomes.py  houza.py  justproperty.py  normalizer.py  property_finder.py
backend/db/: init.sql
backend/scripts/: backfill_images.py  fetch_pois.py  fetch_pois_google.py  index_vectors.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/listings/: page.tsx
frontend/src/app/property/[id]/: page.tsx
frontend/src/components/: AppHeader.tsx  ListingCard.tsx  PreferencesForm.tsx  PropertyChat.tsx  PropertyMap.tsx  ScoreBadge.tsx
frontend/src/lib/: api.ts
